<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.TaskViewActivity">

    <item
        android:id="@+id/action_sort_tasks_alpha"
        android:title="@string/task_sort_alpha_title"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/action_sort_tasks_numerical"
        android:title="@string/task_sort_numeric_title"
        app:showAsAction="collapseActionView"/>

    <item
        android:id="@+id/action_task_add"
        android:icon="@drawable/ic_add_icon"
        android:title="@string/task_add_title"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_refresh_data"
        android:icon="@drawable/ic_undo"
        android:title="@string/task_add_title"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/task_logout"
        app:showAsAction="collapseActionView"/>

</menu>