<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LoginFragment"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:orientation="vertical">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Welcome to Task Manager"
        android:id="@+id/textView6"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="15dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Please login or register"
        android:id="@+id/textView7"
        android:layout_gravity="center_horizontal" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:hint="@string/login_username"
        android:layout_marginTop="40dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/editText4"
        android:hint="@string/login_password"
        android:layout_gravity="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_submit"
        android:id="@+id/LoginBtn"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_marginTop="15dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_register"
        android:id="@+id/SwitchToRegisterBtn"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
